--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "*.{js,vue}": "eslint"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
