--- a/package.json
+++ b/package.json
@@ -1,42 +1,14 @@
 {
-  "name": "roadmap",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "prepare": "husky install",
-    "lint": "yarn lint:js",
-    "test": "jest"
-  },
-  "lint-staged": {
-    "*.{js,vue}": "eslint"
-  },
-  "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.2.0",
-    "@vue/test-utils": "^1.2.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.0.5",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "husky": "^6.0.0",
-    "jest": "^27.0.5",
-    "lint-staged": "^10.5.4",
-    "postcss": "^8.3.5",
-    "prettier": "^2.3.2",
-    "vue-jest": "^3.0.4"
+    "autoprefixer": "^10.4.1",
+    "nuxt3": "latest",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
